--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>楊侑叡的個人部落格</h1>
         <nav>
             <a href="#section1">關於我</a>
-            <a href="#section2">工作經歷</a>
+            <a href="#section2">學習經歷</a>
             <a href="#section3">工作技能</a>
             <a href="#section4">音樂作品</a>
             <a href="#section5">視訊作品</a>
@@ -160,5 +160,6 @@
 </body>
 
 </html>
+
 
 
