--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <section>
                 <table cellspacing="20">
                     <tr>
-                        <td><img src="assets/images/SL photo.jpg" alt="Steven picture"></td>
+                        <td><img src="S__48939035.jpg" alt="Ricky picture"></td>
                         <td><h1>Ricky</h1><p>
                             <em><strong><a href="https://www.ntue.edu.tw/">國立台北教育大學</a></strong>大二學生</em></p></td>
                     </tr>
@@ -125,13 +125,13 @@
             <h2>旅行照片集</h2>
             <figure style="display:inline-block;">
                 <!-- 改為你的作品 -->
-                <img src="assets/images/mountain.jpg" alt="山間風景" width="450">
-                <figcaption>壯麗的山景</figcaption>
+                <img src="S__48939039_0.jpg" alt="騎車亂跑" width="450">
+                <figcaption>騎車亂跑</figcaption>
             </figure>
             <figure style="display:inline-block;">
                 <!-- 改為你的作品 -->
-                <img src="assets/images/village.jpg" alt="小鎮景色" width="450">
-                <figcaption>寧靜的小鎮</figcaption>
+                <img src="S__48939041_0.jpg" alt="風景照" width="450">
+                <figcaption>風景照</figcaption>
             </figure>
         </article>
 
@@ -160,6 +160,7 @@
 </body>
 
 </html>
+
 
 
 
