--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </details>
 
         <!-- 加入地圖 -->
-        <iframe src="https://maps.app.goo.gl/4tjWc4EbURcnnsk39"></iframe>        
+        <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10224.279732627021!2d121.56790643235972!3d25.039884534243363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abb6e9d93249%3A0xd508f7b3aa02d931!2z5Y-w5YyXMTAx6KeA5pmv5Y-w!5e0!3m2!1szh-TW!2stw!4v1764447879640!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"></iframe>        
     </main>
     
     <!-- 頁尾區 -->
@@ -160,6 +160,7 @@
 </body>
 
 </html>
+
 
 
 
