--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <a href="#section1">關於我</a>
             <a href="#section2">學習經歷</a>
-            <a href="#section3">工作技能</a>
+            <a href="#section3">個人技能</a>
             <a href="#section4">音樂作品</a>
             <a href="#section5">視訊作品</a>
             <a href="#section6">圖片作品</a>
@@ -77,20 +77,20 @@
         <!-- 技能介紹 -->
         <article id="section3">
             <header>
-                <h2>工作技能</h2>
+                <h2>個人技能</h2>
             </header>
             <section>
                 <table>
                     <tr>
                         <td>Java</td>
-                        <td>⭐⭐⭐</td>
+                        <td>⭐</td>
                     </tr>
                     <tr>
                         <td>C++</td>
                         <td>⭐⭐⭐</td>
                     </tr>
                     <tr>
-                        <td>Python</td>
+                        <td>講幹話</td>
                         <td>⭐⭐⭐⭐⭐</td>
                     </tr>
                 </table>
@@ -102,7 +102,7 @@
             <h2>音訊介紹</h2>
             <audio controls>
                 <!-- 改為你的作品 -->
-                <source src="assets/audio/Whispers in the Trees 1.mp3" type="audio/mpeg">
+                <source src="New Composition #1.mp3" type="audio/mpeg">
             </audio>
         </article>
 
@@ -149,7 +149,7 @@
         </details>
 
         <!-- 加入地圖 -->
-        <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10224.279732627021!2d121.56790643235972!3d25.039884534243363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abb6e9d93249%3A0xd508f7b3aa02d931!2z5Y-w5YyXMTAx6KeA5pmv5Y-w!5e0!3m2!1szh-TW!2stw!4v1764447879640!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"></iframe>        
+        <iframe src=<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d464364.04720518197!2d120.97374498303373!3d24.59457533597972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3468933811c42c7d%3A0xc7857fb6189d774!2z5q2m5ba6!5e0!3m2!1szh-TW!2stw!4v1764448254476!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>       
     </main>
     
     <!-- 頁尾區 -->
@@ -160,6 +160,7 @@
 </body>
 
 </html>
+
 
 
 
