--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                     </tr>
                     <tr>
                         <td>C++</td>
-                        <td>⭐⭐⭐</td>
+                        <td>⭐</td>
                     </tr>
                     <tr>
-                        <td>講幹話</td>
+                        <td>講廢話</td>
                         <td>⭐⭐⭐⭐⭐</td>
                     </tr>
                 </table>
@@ -160,6 +160,7 @@
 </body>
 
 </html>
+
 
 
 
